tests/fixtures/positive/empty-blocks/EmptySecondaryConstructor.kt
package fixtures.positive.emptyblocks

class Foo(val name: String) {
    constructor(x: Int) : this(x.toString()) { }
}
